<resources>

    <string name="app_name">MedicInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="Login">Login</string>
    <string name="registration">New? Join Us here</string>
    <string name="please">Please login below:</string>
    <string name="signuppage">Please Sign up below :</string>
    <string name="name">Name :</string>
    <string name="signupbutton">Sign Up</string>
    <string name="Myprofile">My Profile</string>
    <string name="Startjob">Start Job</string>
    <string name="Instruction">Instruction</string>
    <string name="Logout">Logout</string>
    <string name="Submit">Submit</string>
    <string name="imageloding">Image Loding....</string>
    <string name="Agree">Agree</string>
    <string name="Doubt">I Doubt</string>
    <string name="JobDone">Job Done :</string>
    <string name="AmountEarned">Amount Earned :</string>
    

</resources>