<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:background="#E6DfD6">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="#E6DfD6">
 
        <!--  Header Starts-->
        <LinearLayout android:id="@+id/header"
 		   android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:background="@layout/header_gradient"
  		  android:paddingTop="5dip"
  		  android:paddingBottom="5dip">
        <!-- Logo Start-->
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/app_name"/>
        <!-- Logo Ends -->
		</LinearLayout>
        <!--  Header Ends -->
 
           <RelativeLayout
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="300dp"
               android:layout_below="@+id/header"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               android:layout_marginTop="30dp"
               android:background="#F2e8DC"
               android:gravity="center_horizontal"
               android:orientation="vertical"
               android:padding="10dip" >

               <ImageView
                   android:id="@+id/imageprofile"
                   android:layout_width="130dp"
                   android:layout_height="130dp"
                   android:contentDescription="@string/Myprofile"
                   android:src="@drawable/profile" />

                    <ImageView
                        android:id="@+id/imagestartjob"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/imageprofile"
                        android:contentDescription="@string/Myprofile"
                        android:src="@drawable/startjob" />
               
                <ImageView
                   android:id="@+id/imageInstruction"
                   android:layout_width="130dp"
                   android:layout_height="130dp"
                   android:layout_alignLeft="@+id/imageprofile"
                   android:layout_below="@+id/imageprofile"
                   android:contentDescription="@string/Instruction"
                   android:layout_marginTop="15dp"
                   android:src="@drawable/instruction" />

               <ImageView
                   android:id="@+id/imagelogout"
                   android:layout_width="130dp"
                   android:layout_height="130dp"
                   android:layout_alignParentRight="true"
                   android:layout_alignRight="@id/imagestartjob"
                   android:layout_alignTop="@id/imageInstruction"
                   android:layout_below="@id/imagestartjob"
                   android:layout_toRightOf="@id/imageInstruction"
                   android:contentDescription="@string/Logout"
                   android:src="@drawable/logout" />

           </RelativeLayout>
 
  </RelativeLayout>
</ScrollView>
