<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:background="#E6DfD6">
  
        <!--  Header Starts-->
        <LinearLayout android:id="@+id/header"
 		   android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:background="@layout/header_gradient"
  		  android:paddingTop="5dip"
  		  android:paddingBottom="5dip">
        <!-- Logo Start-->
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/app_name"/>
        <!-- Logo Ends -->
		</LinearLayout>
        <!--  Header Ends -->
 
           <RelativeLayout
              android:id="@+id/workscreen"
 		   	   android:layout_width="match_parent"
               android:layout_height="fill_parent"
               android:layout_below="@+id/header"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               android:layout_marginTop="15dp"
               android:background="#F2e8DC" >

               <ImageView
      			 android:id="@+id/startjobImage"
      			 android:layout_width="fill_parent"
      			 android:layout_height="200dp"
       			 android:scaleType="matrix"
       			 android:contentDescription="@string/Startjob" />
   				
                <EditText
      			 android:id="@+id/ETPescription"
      			 android:layout_width="match_parent"
      			 android:layout_height="wrap_content"
      			 android:layout_alignParentLeft="true"
      			 android:layout_below="@+id/startjobImage"
      			 android:layout_marginTop="5dp"
     			 android:background="#ffffff"
       			 android:ems="10"
      			 android:inputType="textMultiLine"/>
             
                <Spinner
       			 android:id="@+id/category"
        		 android:layout_width="fill_parent"
        		 android:layout_height="wrap_content"
        		 android:layout_below="@+id/ETPescription"
        		 android:layout_marginTop="5dp"/>
                
             <Button
                 android:id="@+id/btnSubmit"
                 android:layout_width="120dp"
                 android:layout_height="30dp"
                 android:layout_alignRight="@id/category"
                 android:layout_below="@+id/category"
                 android:layout_marginTop="5dp"
                 android:background="@layout/header_gradient"
                 android:text="@string/Submit"
                 android:textColor="#ffffff"
                 android:textSize="20dp" />

           </RelativeLayout>

           
 	    <LinearLayout 
	        android:id="@+id/loading_sv"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_below="@+id/header"
	        android:padding="10dp"
	        android:visibility="gone">
	    
	    <TextView
		    android:id="@+id/loading_tv"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:text="@string/imageloding" />
	    
	    <ProgressBar
	        android:id="@+id/loading_pb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:indeterminate="true"
	        android:layout_gravity="center" />
	    
	    </LinearLayout>
 
</RelativeLayout>
