<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:background="#E6DfD6">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="#E6DfD6">
 
        <!--  Header Starts-->
        <LinearLayout android:id="@+id/header"
 		   android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:background="@layout/header_gradient"
  		  android:paddingTop="5dip"
  		  android:paddingBottom="5dip">
        <!-- Logo Start-->
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:contentDescription="@string/app_name"/>
        <!-- Logo Ends -->
		</LinearLayout>
        <!--  Header Ends -->
 
            <RelativeLayout
              android:id="@+id/workscreenverify"
 		   	   android:layout_width="match_parent"
               android:layout_height="fill_parent"
               android:layout_below="@+id/header"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               android:layout_marginTop="15dp"
               android:background="#F2e8DC" >

               <ImageView
      			 android:id="@+id/verifyjobImage"
      			 android:layout_width="fill_parent"
      			 android:layout_height="200dp"
       			 android:scaleType="matrix"
       			 android:contentDescription="@string/Startjob" />
   				
               <TextView
      			 android:id="@+id/TVPescription1"
      			 android:layout_width="match_parent"
      			 android:layout_height="wrap_content"
      			 android:layout_alignParentLeft="true"
      			 android:layout_below="@+id/verifyjobImage"
      			 android:layout_marginTop="5dp"
      			 android:textColor="#000000"
      			 android:text="Pescription:"
     			 android:ems="10"/>
                
                <TextView
      			 android:id="@+id/TVPescription"
      			 android:layout_width="match_parent"
      			 android:layout_height="wrap_content"
      			 android:layout_alignParentLeft="true"
      			 android:layout_below="@+id/TVPescription1"
      			 android:background="#ffffff"
       			 android:ems="10"/>
             
                <TextView
       			 android:id="@+id/TVcategory1"
        		 android:layout_width="fill_parent"
        		 android:layout_height="wrap_content"
        		 android:layout_below="@+id/TVPescription"
        		 android:text="Category:"
        		 android:textColor="#000000"
        		 android:layout_marginTop="5dp"/>
                
                <TextView
       			 android:id="@+id/TVcategory"
        		 android:layout_width="fill_parent"
        		 android:layout_height="wrap_content"
        		 android:layout_below="@+id/TVcategory1"
        		 android:background="#ffffff"/>
                
             <Button
                 android:id="@+id/btnDoubt"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:layout_alignLeft="@+id/TVcategory"
                 android:layout_below="@+id/TVcategory"
                 android:layout_marginTop="5dp"
                 android:background="@layout/header_gradient"
                 android:text="@string/Doubt"
                 android:textColor="#ffffff"
                 android:textSize="20dp" />
             
             <Button
                 android:id="@+id/btnAgree"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:layout_alignRight="@+id/TVcategory"
                 android:layout_below="@+id/TVcategory"
                 android:layout_marginTop="5dp"
                 android:background="@layout/header_gradient"
                 android:text="@string/Agree"
                 android:textColor="#ffffff"
                 android:textSize="20dp" />

           </RelativeLayout>
           
 	    <LinearLayout 
	        android:id="@+id/loading_sv"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="10dp"
	        android:visibility="gone">
	    
	    <TextView
		    android:id="@+id/loading_tv"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:text="@string/imageloding" />
	    
	    <ProgressBar
	        android:id="@+id/loading_pb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:indeterminate="true"
	        android:layout_gravity="center" />
	    
	    </LinearLayout>
 
  </RelativeLayout>
</ScrollView>
